Add Apache Arrow as a bulk ingestion format